spacing fix

--- a/wp-content/themes/frautiroler/assets/scss/_header.scss
+++ b/wp-content/themes/frautiroler/assets/scss/_header.scss
@@ -24,7 +24,7 @@
 	    background-position: center;
 	    background-size: cover;
 	    @media(max-width: 991px){
-	    	min-height: 220px;
+	    	min-height: 235px;
 	    	z-index: 0;
 	    }
     }
